# minisgms

./: Cargo.toml
benches/: anims_bench.rs
examples/: spleef.rs
src/: anims.rs  lib.rs  main.rs  minigames.rs  plugin.rs  things.rs
src/anims/: plugin.rs  things.rs
src/minigames/: manager.rs  plugin.rs  spleef.rs
