[profile.dev.package."*"]
opt-level = 3

[package]
name = "minigames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
libm = "0.2.7"
rand = "0.8.5"
valence = { git = "https://github.com/valence-rs/valence" }
